--- a/CSS/customer.css
+++ b/CSS/customer.css
@@ -15,3 +15,9 @@
   text-align: center;
   background-color: #c4c4c4;
 }
+
+@media (min-width: 576) {
+  .form-inline .form-control {
+    width: 10rem !important;
+  }
+}
